--- a/laravel/resources/css/app.css
+++ b/laravel/resources/css/app.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+    nav {
+        @apply p-4 max-w-screen-lg mx-auto flex items-center justify-between;
+    }
+}
